@@ -1,6 +1,7 @@
 == 0.23.1
 
 * Enhancements
+  * Sticky JSON API now includes group_description
   * Updated to Rails 3.2.7
     * Removed deprecated use of update_attribute for Rails 4.0 compatibility
 
